--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -77,6 +77,11 @@ header .container{
 	padding-right:0;
 }
 
+.lang{
+	padding-left:18px;
+	padding-right: 0;
+}
+
 .lang *{
 	text-align: right;
 	font-size:13px;
@@ -84,6 +89,7 @@ header .container{
 .lang a{
 	color: black;
 	font-size: 13px;
+	text-decoration: none;
 }
 
 .navbar-header{
