Underline of lang urls.

--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -90,6 +90,9 @@ header .container{
 	font-size: 13px;
 	text-decoration: none;
 }
+.lang a:hover {
+	text-decoration: underline !important;
+}
 
 .navbar-header{
 	margin-top: 40px;
