--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -223,6 +223,12 @@ footer{
 	padding-left: 0;
 	margin-left:0;
 	border-bottom: 0;
+	font-size: 18px;
+	font-weight: bold;
+}
+
+#mail{
+	font-weight: bold;
 }
 
 #phone + a{
