--- a/public_html/assets/css/style.css
+++ b/public_html/assets/css/style.css
@@ -13,8 +13,10 @@ a{
 /* Homepage header */
 header{
 	height: 150px;
+	position: relative;
 	display: block;
 	width: 100%;
+	overflow: hidden;
 }
 
 header .container{
@@ -29,24 +31,31 @@ header .container{
 }
 
 #blank-left{
+	position: absolute;
+	left: 0;
 	background: #000;
-	height: 150px;
+	height: 180px;
 	width: 50%;
 }
 
 #blank-right{
+	position: absolute;
+	right: 0;
 	width:50%;
 	border-bottom: 1px solid #ddd;
 	height: 41px;
 }
 
 #logo{
+	display: block;
+	height:151px;
+	width: 351px;
 	background: black;
-	margin-left: -15px;
+	margin-left: -18px;
 }
 
 #logo img{
-	height:150px;
+	height:100%;
 }
 
 .contacts{
